request obj done

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>rebirth of reddit</title>
 </head>
 <body>
-  <div class = 'main'>
+  <div id = 'main'>
 <div class = 'header'>
   <div class = ''></div>
-  <button class = 'sub1' onclick=""></button>
-<button class="sub2" onclick=""></button>
-<button class="sub3" onclick=""></button>
+  <button class = 'sub1' onclick="">button1</button>
+<button class="sub2" onclick="">button2</button>
+<button class="sub3" onclick="">button3</button>
 </div>
 
 
