--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>rebirth of reddit</title>
 </head>
 <body>
+  <div class="header">Site Header</Header></div>
+  <div class="container"></div>
   <div id = 'main'>
 <div class = 'header'>
   <div class = ''></div>
