--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,24 +8,16 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>rebirth of reddit</title>
 </head>
+
 <body>
-  <div class="header">Site Header</Header></div>
-  <div class="container"></div>
-  <div id = 'main'>
-<div class = 'header'>
-  <div class = ''></div>
-  <button class = 'sub1' onclick="">button1</button>
-<button class="sub2" onclick="">button2</button>
-<button class="sub3" onclick="">button3</button>
-</div>
-
-
-
+  <div class="header">
+    <button id='sub1'>Eyebleach</button>
+    <button id="sub2" onclick="">Marvel</button>
+    <button id="sub3" onclick="">Pictures</button>
   </div>
-
-
-
-
-<script src="js/app.js"></script>
+  <div id='main'></div>
+  <script src="js/app.js"></script>
+  <footer> <img src="assets/facebook_grey.svg" alt=""><span id="instaGram"><img src="assets/instagram_orange.svg" alt=""></span></footer>
 </body>
+
 </html>
